Altered client to accomodate ICS2 message structure